syntax = "proto3";

option go_package = ".;pb";


message NewUserSignupRequest {
    string user_id = 1;
    string password = 2;
}
  
message NewUserSignupResponse {
    NewUserSignupRequest req = 1;
    int32 status = 2;
    string message = 3;
}

message UserLoginRequest {
    string user_id = 1;
    string password = 2;
}
  
message UserLoginResponse {
    string token = 1;
    int32 status = 2;
    string message = 3;
}


service AuthService {
    rpc Signup(NewUserSignupRequest) returns (NewUserSignupResponse) {}; 
    rpc Login(UserLoginRequest) returns (UserLoginResponse) {}; 
}